--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -207,7 +207,8 @@
   letter-spacing: 0.05em;
   display: flex;
   align-items: center;
-  box-shadow: 0em .1em 3em #7497F314, 0em 0.4em 0.6em #000000c0;
+  /* box-shadow: 0em .1em 3em #7497F314, 0em 0.4em 0.6em #000000c0; */
+  box-shadow: 0em 0em 1em #51ab6064, 0em 0.4em 0.6em #000000fa;
   animation: fadeInUp 0.5s ease-out both;
 }
 
