--- a/src/styles/Examples.css
+++ b/src/styles/Examples.css
@@ -46,7 +46,7 @@
     letter-spacing: 0.05em;
     display: flex;
     align-items: center;
-    box-shadow: 0em 1em 3em #7497F334, 0em 0.4em 0.6em #000000c0;
+    box-shadow: 0em 0em 2em #7497F324, 0em 0.4em 0.6em #000000c0;
     overflow: hidden;
     position: relative;
     height: 2.8em;
@@ -84,7 +84,7 @@
 }
 
 .examples-button:hover {
-    box-shadow: 0em 1em 3em #7497F364, 0em 0.4em 0.6em #000000f0;
+    box-shadow: 0 0 4em #7497F354, 0em 0.4em 0.6em #000000f0;
     transform: translateY(-0.2em);
 }
   
@@ -132,7 +132,7 @@
     transition: width 0.2s ease-in-out;
     font-weight: 500;
     font-family: inherit;
-    box-shadow: 0em 1em 3em #7497F334, 0em 0.4em 0.6em #000000c0;
+    box-shadow: 0em 0em 1em #51ab6064, 0em 0.4em 0.6em #000000fa;
     animation: fadeInUp 0.5s ease-out both;
     animation-delay: 0.5s;
 }
